Fix navigation styling on smaller screens

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -279,8 +279,8 @@ footer {
     width:99%;
   }
 
-  header li, header ul li + li + li {
-    width:33%;
+  header li, header ul li + li {
+    width:50%;
   }
 }
 
